google authentication is added

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-SECRET = Thisisourlittlesecret.
+CLIENT_ID = 883659815502-o55jnmjkvoktiamal91rovokubq1ner0.apps.googleusercontent.com
+CLIENT_SECRET = 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
